--- a/grid-demo-gallery.html
+++ b/grid-demo-gallery.html
@@ -20,17 +20,15 @@
 
       main {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
         grid-gap: 1rem;
-      }
-
-      div {
-        object-fit: contain;
       }
 
       img {
         display: block;
-        max-width: 100%;
+        width: 100%;
+        /*height: 300px;*/
+        /*object-fit: cover;*/
       }
 
     </style>
