--- a/grid-demo-simple.html
+++ b/grid-demo-simple.html
@@ -25,12 +25,13 @@
 
 
       /*display: grid;*/
-      /*grid-template-columns: 1fr 1fr;*/
       /*grid-template-columns: 200px 500px;*/
+      /*grid-template-columns: 1fr 1fr;*/
+      /*grid-template-columns: repeat(2, 200px);*/
       /*grid-template-columns: repeat(auto-fill, 200px);*/
-      /*grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));*/
       /*grid-template-rows: auto;*/
       /*grid-template-rows: repeat(3, 150px);*/
+      /* grid-gap:  1em; */
     }
 
     main > div {
