Pedantic lowercase for hex values

--- a/grid-demo-simple.html
+++ b/grid-demo-simple.html
@@ -20,7 +20,7 @@
     }
 
     main {
-      background-color: #FF89AF;
+      background-color: #ff89af;
       padding: 10px 30px;
 
 
@@ -29,13 +29,15 @@
       /*grid-template-columns: 1fr 1fr;*/
       /*grid-template-columns: repeat(2, 200px);*/
       /*grid-template-columns: repeat(auto-fill, 200px);*/
+
       /*grid-template-rows: auto;*/
       /*grid-template-rows: repeat(3, 150px);*/
+
       /* grid-gap:  1em; */
     }
 
     main > div {
-      background: #A13658;
+      background-color: #a13658;
       color: white;
       font-size: 24px;
       margin: 20px 0;
