Remove grid properties

--- a/final/index.html
+++ b/final/index.html
@@ -52,7 +52,7 @@
         <h4>Phylum</h4>
         <p>Cordata</p>
       </div>
-      <div class="classification class">
+      <div class="classification designation">
         <h4>Class</h4>
         <p>Aves</p>
       </div>
